Changed color theme selection handling within PHNSettingsViewController.

--- a/Unroll2/Base.lproj/Main.storyboard
+++ b/Unroll2/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="XRF-wX-XIn">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="XRF-wX-XIn">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -867,7 +867,7 @@
                                                                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                     </state>
                                                                     <connections>
-                                                                        <action selector="standardColor:" destination="AXu-8r-XFG" eventType="touchUpInside" id="XNW-4f-bwo"/>
+                                                                        <action selector="selectedColor:" destination="AXu-8r-XFG" eventType="touchUpInside" id="ScA-xi-pEZ"/>
                                                                     </connections>
                                                                 </button>
                                                                 <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cbH-rK-9Em" userLabel="Red Button">
@@ -881,7 +881,7 @@
                                                                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                     </state>
                                                                     <connections>
-                                                                        <action selector="standardColor:" destination="AXu-8r-XFG" eventType="touchUpInside" id="23f-dO-avC"/>
+                                                                        <action selector="selectedColor:" destination="AXu-8r-XFG" eventType="touchUpInside" id="30G-0G-aq4"/>
                                                                     </connections>
                                                                 </button>
                                                                 <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zdA-6l-M8q" userLabel="Black Button">
@@ -895,7 +895,7 @@
                                                                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                     </state>
                                                                     <connections>
-                                                                        <action selector="standardColor:" destination="AXu-8r-XFG" eventType="touchUpInside" id="1Hn-59-kOQ"/>
+                                                                        <action selector="selectedColor:" destination="AXu-8r-XFG" eventType="touchUpInside" id="L0O-iW-Uc5"/>
                                                                     </connections>
                                                                 </button>
                                                                 <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m4o-58-Ivl" userLabel="Purple Button">
@@ -909,7 +909,7 @@
                                                                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                     </state>
                                                                     <connections>
-                                                                        <action selector="standardColor:" destination="AXu-8r-XFG" eventType="touchUpInside" id="THc-Ka-NrU"/>
+                                                                        <action selector="selectedColor:" destination="AXu-8r-XFG" eventType="touchUpInside" id="hwb-XB-FbM"/>
                                                                     </connections>
                                                                 </button>
                                                             </subviews>
@@ -928,7 +928,7 @@
                                                                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                     </state>
                                                                     <connections>
-                                                                        <action selector="standardColor:" destination="AXu-8r-XFG" eventType="touchUpInside" id="IlU-ue-ezS"/>
+                                                                        <action selector="selectedColor:" destination="AXu-8r-XFG" eventType="touchUpInside" id="E8l-K6-Od6"/>
                                                                     </connections>
                                                                 </button>
                                                                 <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="apw-eK-jM9" userLabel="Yellow Button">
@@ -942,7 +942,7 @@
                                                                         <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                                                     </state>
                                                                     <connections>
-                                                                        <action selector="standardColor:" destination="AXu-8r-XFG" eventType="touchUpInside" id="9EO-cK-CFO"/>
+                                                                        <action selector="selectedColor:" destination="AXu-8r-XFG" eventType="touchUpInside" id="WEG-cC-zqc"/>
                                                                     </connections>
                                                                 </button>
                                                                 <button opaque="NO" tag="6" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gy7-LR-DNJ" userLabel="Green Button">
@@ -956,7 +956,7 @@
                                                                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                     </state>
                                                                     <connections>
-                                                                        <action selector="standardColor:" destination="AXu-8r-XFG" eventType="touchUpInside" id="d4h-qX-6vx"/>
+                                                                        <action selector="selectedColor:" destination="AXu-8r-XFG" eventType="touchUpInside" id="1Xg-uu-cI1"/>
                                                                     </connections>
                                                                 </button>
                                                                 <button opaque="NO" tag="7" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IXK-Q1-CBc">
@@ -970,7 +970,7 @@
                                                                         <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                                                     </state>
                                                                     <connections>
-                                                                        <action selector="standardColor:" destination="AXu-8r-XFG" eventType="touchUpInside" id="eNJ-Hv-B9l"/>
+                                                                        <action selector="selectedColor:" destination="AXu-8r-XFG" eventType="touchUpInside" id="BN9-Qg-ewF"/>
                                                                     </connections>
                                                                 </button>
                                                             </subviews>
@@ -1256,12 +1256,12 @@
             <point key="canvasLocation" x="1863" y="-1045"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="zVD-Ov-2nV"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="FatGear" width="22" height="22"/>
         <image name="InAppIcon" width="341.33334350585938" height="341.33334350585938"/>
         <image name="WhiteStarEmpty" width="44" height="44"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="zVD-Ov-2nV"/>
-    </inferredMetricsTieBreakers>
 </document>
